--- a/html/index.html
+++ b/html/index.html
@@ -9,27 +9,27 @@
 
 <button type="button">Display Node</button>
 <p id="node"></p>
-<script src="display_node.js"></script>
+<script src="../javascript/display_node.js"></script>
 
 <button type="button" onclick="isMetamaskInstalled()">Is MetaMask installed?</button>
 <p id="installed"></p>
-<script src="isMetamaskInstalled.js"></script>
+<script src="../javascript/isMetamaskInstalled.js"></script>
 
 <button type="button" onclick="connectToMetamask()">Connect to MetaMask</button>
 <p id="connect"></p>
-<script src="connectToMetamask.js"></script>
+<script src="../javascript/connectToMetamask.js"></script>
 
 <button type='button' onclick="isMetamaskLocked()">MetaMask status</button>
 <p id="locked"></p>
-<script src="isMetamaskLocked.js"></script>
+<script src="../javascript/isMetamaskLocked.js"></script>
 
 <button type='button' onclick="getAddressBalance()">Get Account Balance</button>
 <p id="account_balance"></p>
-<script src="getAddressBalance.js"></script>
+<script src="../javascript/getAddressBalance.js"></script>
 
 <button type='button' onclick="getCommitteeMembers()">Get Committee Members</button>
 <p id="members"></p>
-<script src="getCommitteeMembers.js"></script>
+<script src="../javascript/getCommitteeMembers.js"></script>
 
 </body>
 </html>
