--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
 
 <h1>This is a Heading</h1>
 
+<!-- Metamask interfacing section -->
 <button type="button">Display Node</button>
 <p id="node"></p>
 <script src="../javascript/display_node.js"></script>
@@ -27,9 +28,18 @@
 <p id="account_balance"></p>
 <script src="../javascript/getAddressBalance.js"></script>
 
+<!-- Smart Contract interfacing section 
+<script src="../javascript/contract_data.js"></script>-->
+
 <button type='button' onclick="getCommitteeMembers()">Get Committee Members</button>
 <p id="members"></p>
 <script src="../javascript/getCommitteeMembers.js"></script>
+
+Insert address of new member</br>
+<input type='text' name="newmember_address" id="newmember"></input>
+<button type='button' onclick="addMember()">Add new member</button>
+<p id="newmember_result"></p>
+<script src="../javascript/addMember.js"></script>
 
 </body>
 </html>
